Added choice between postgresql/sqlite3 database type at install

--- a/manifest.json
+++ b/manifest.json
@@ -69,6 +69,15 @@
                     "en": "Make the app public?",
                     "fr": "Rendre l'application publique ?"
                 }
+            },
+            {
+                "name": "db_type",
+                "choices": ["postgresql", "sqlite"],
+                "default": "postgresql",
+                "ask": {
+                    "en": "Choose the database to use",
+                    "fr": "Choisissez la base de donnée à utiliser"
+                }
             }
         ]
     }
