--- a/conf/app.service
+++ b/conf/app.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 PIDFile=/run/gunicorn/__YNH_APP_NAME__-pid
 User=__YNH_APP_NAME__
-Group=www-data
+Group=__YNH_APP_NAME__
 WorkingDirectory=__YNH_APP_PATH__
 ExecStart=__YNH_APP_PATH__/venv/bin/gunicorn -c __YNH_APP_PATH__/gunicorn.py wsgi:app
 ExecReload=/bin/kill -s HUP $MAINPID
