--- a/manifest.json
+++ b/manifest.json
@@ -3,77 +3,50 @@
     "id": "flask",
     "packaging_format": 1,
     "description": {
-        "en": "Flask app template.",
-        "fr": "Modèle d'app en Flask."
+        "en": "Setup a 'Hello World' Flask app template with Nginx and a database.",
+        "fr": "Met en place un modèle 'Hello World' d'application Flask avec Nginx et une base de donnée."
     },
+    "version": "2.0~ynh1",
+    "url": "https://palletsprojects.com/p/flask/",
+    "license": "BSD-3-Clause",
     "maintainer": {
+        "name": "",
+        "email": ""
+    },
+    "previous_maintainers": [{
         "name": "alexAubin",
         "email": "alex.aubin@mailoo.org"
-    },
+    }],
     "requirements": {
-        "yunohost": ">> 3.8.0"
+        "yunohost": ">= 4.2.3"
     },
-    "version": "20180725",
-    "multi_instance": "false",
+    "multi_instance": true,
     "services": [
-        "nginx"
+        "nginx",
+        "mysql"
     ],
     "arguments": {
         "install" : [
             {
-                "name": "system_name",
-                "type": "string",
-                "example": "myapp",
-                "ask": {
-                    "en": "Short name used by the system to identify your app",
-                    "fr": "Nom court utilisé par le système pour identifier l'application"
-                },
-                "help": {
-                    "en": "(only lowercases, alphanumeric characters, no spaces)",
-                    "fr": "(caractères alphanumériques en minuscules seulement, pas d'espace"
-                }
-            },
-            {
-                "name": "display_name",
-                "type": "string",
-                "example": "My App",
-                "ask": {
-                    "en": "Display name (used in SSO portal)",
-                    "fr": "Nom affiché (utilisé dans le portail SSO)"
-                }
-            },
-            {
                 "name": "domain",
-                "type": "domain",
-                "example": "example.com",
-                "ask": {
-                    "en": "Choose a domain for the flask app",
-                    "fr": "Choisissez un nom de domaine pour l'application flask"
-                }
+                "type": "domain"
             },
             {
                 "name": "path",
                 "type": "path",
-                "example": "/flask",
-                "default": "/flask",
-                "ask": {
-                    "en": "Choose a path for the flask app",
-                    "fr": "Choisissez un chemin pour l'application flask"
-                }
+                "example": "/site",
+                "default": "/site"
             },
             {
                 "name": "is_public",
                 "type": "boolean",
-                "default": true,
-                "ask": {
-                    "en": "Make the app public?",
-                    "fr": "Rendre l'application publique ?"
-                }
+                "default": true
             },
             {
                 "name": "db_type",
-                "choices": ["postgresql", "sqlite"],
-                "default": "postgresql",
+                "type": "string",
+                "choices": ["postgresql", "mysql", "sqlite", "none"],
+                "default": "sqlite",
                 "ask": {
                     "en": "Choose the database to use",
                     "fr": "Choisissez la base de donnée à utiliser"
