--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "flask",
     "packaging_format": 1,
     "description": {
-        "en": "Setup a 'Hello World' Flask app template with Nginx and a database.",
-        "fr": "Met en place un modèle 'Hello World' d'application Flask avec Nginx et une base de donnée."
+        "en": "Setup a 'Hello World' Flask app template with NGINX and a database",
+        "fr": "Met en place un modèle 'Hello World' d'application Flask avec NGINX et une base de donnée"
     },
     "version": "2.0~ynh1",
     "url": "https://palletsprojects.com/p/flask/",
