--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -1,34 +1,43 @@
 [Unit]
 Description=__APP__ gunicorn daemon
-After=network.target
 
 [Service]
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__FINALPATH__/
-ExecStart=__FINALPATH__/venv/bin/gunicorn -c __FINALPATH__/gunicorn.py wsgi:app
-StandardOutput=append:/var/log/__APP__/__APP__.log
-StandardError=inherit
+WorkingDirectory=__DATA_DIR__/
 
+# UVICORN_ROOT_PATH is used by Flask to serve the 'docs' page correctly
+Environment="UVICORN_ROOT_PATH=__PATH__"
+
+ExecStart=__INSTALL_DIR__/venv/bin/gunicorn --config __INSTALL_DIR__/gunicorn.conf.py flask-app:app --worker-class uvicorn.workers.UvicornWorker
+
+StandardOutput=syslog
+StandardError=syslog
+SyslogIdentifier=__APP__-server
 
 # Sandboxing options to harden security
-# Depending on specificities of your service/app, you may need to tweak these 
+# Depending on specificities of your service/app, you may need to tweak these
 # .. but this should be a good baseline
 # Details for these options: https://www.freedesktop.org/software/systemd/man/systemd.exec.html
 NoNewPrivileges=yes
 PrivateTmp=yes
 PrivateDevices=yes
-RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
+RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6 AF_NETLINK
 RestrictNamespaces=yes
 RestrictRealtime=yes
 DevicePolicy=closed
+ProtectClock=yes
+ProtectHostname=yes
+ProtectProc=invisible
 ProtectSystem=full
 ProtectControlGroups=yes
 ProtectKernelModules=yes
 ProtectKernelTunables=yes
 LockPersonality=yes
-SystemCallFilter=~@clock @debug @module @mount @obsolete @reboot @swap
+SystemCallArchitectures=native
+#TODO : list all system call that could be needed by the application
+#SystemCallFilter=~@clock @debug @module @mount @obsolete @reboot @setuid @swap @cpu-emulation @privileged
 
 # Denying access to capabilities that should not be relevant for webapps
 # Doc: https://man7.org/linux/man-pages/man7/capabilities.7.html
