--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -1,17 +1,15 @@
 [Unit]
 Description=__APP__ gunicorn daemon
+After=network.target
 
 [Service]
 Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__DATA_DIR__/
-
 ExecStart=__INSTALL_DIR__/venv/bin/gunicorn --config __INSTALL_DIR__/gunicorn.conf.py flask-app:app
-
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=__APP__-server
+StandardOutput=append:/var/log/__APP__/__APP__.log
+StandardError=inherit
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these
@@ -33,8 +31,7 @@ ProtectKernelModules=yes
 ProtectKernelTunables=yes
 LockPersonality=yes
 SystemCallArchitectures=native
-#TODO : list all system call that could be needed by the application
-#SystemCallFilter=~@clock @debug @module @mount @obsolete @reboot @setuid @swap @cpu-emulation @privileged
+SystemCallFilter=~@clock @debug @module @mount @obsolete @reboot @setuid @swap @cpu-emulation @privileged
 
 # Denying access to capabilities that should not be relevant for webapps
 # Doc: https://man7.org/linux/man-pages/man7/capabilities.7.html
